adding contact us page

--- a/WebSite/Views/Shared/_Layout.cshtml
+++ b/WebSite/Views/Shared/_Layout.cshtml
@@ -154,6 +154,11 @@
                                                     Services
                                                 </a>
                                             </li>
+                                            <li class="dropdown-item">
+                                                <a class="dropdown-item  active" asp-area="" asp-controller="ContactUs" asp-action="Index">
+                                                    Contact Us
+                                                </a>
+                                            </li>
                                         </ul>
                                        
                                     </nav>
